# forge-companion

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
docs/: COMMANDS.md  ROADMAP.md
src/forge_companion/: __init__.py  backup.py  cli.py  client.py  credentials.py  diagnostics.py  fermentation.py  fermentation_csv.py  fermentation_html.py  fermentation_report.py  file_io.py  hopper.py  inventory_audit.py  preferences.py  shelly.py  spunding_advisor.py  spunding_report.py  terminal_text.py
tests/: conftest.py  test_auth_cli.py  test_backup.py  test_brews_cli.py  test_cli.py  test_client.py  test_credentials.py  test_diagnostics.py  test_fermentation.py  test_fermentation_csv.py  test_fermentation_csv_cli.py  test_fermentation_html.py  test_fermentation_html_cli.py  test_fermentation_html_select_cli.py  test_fermentation_report.py  test_file_io.py  test_hopper.py  test_hopper_cli.py  test_inventory_audit.py  test_preferences.py  test_readme_assets.py  test_report_cli.py  test_shared_brew_select_cli.py  test_shelly.py  test_shelly_cli.py  test_spunding_advisor.py  test_spunding_report.py
