[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge-companion"
version = "0.1.1"
description = "Unofficial, read-only community tools for BrewForge"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Johannes Döhler", email = "doehler.johannes@gmail.com" }]
dependencies = [
  "httpx>=0.27,<1",
  "keyring>=25,<27",
  "typer>=0.12,<1",
]

[project.urls]
Homepage = "https://github.com/MrFresskopf/forge-companion"
Repository = "https://github.com/MrFresskopf/forge-companion"
Issues = "https://github.com/MrFresskopf/forge-companion/issues"
Changelog = "https://github.com/MrFresskopf/forge-companion/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<10",
  "pytest-cov>=5,<8",
  "ruff>=0.5,<1",
]

[project.scripts]
forge-companion = "forge_companion.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/forge_companion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["forge_companion"]
